--- a/MCAPIBridge/gradle.properties
+++ b/MCAPIBridge/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.20.6
 yarn_mappings=1.20.6+build.3
 loader_version=0.18.4
 # Mod Properties
-mod_version=0.1
+mod_version=Alpha-0.2.0
 maven_group=taotian.mcapibridge
 archives_base_name=mcapibridge
 # Dependencies
